Minor layout issues, signup with facebook and google+ buttons on signup page.

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -11,14 +11,6 @@
   font-style: normal;
 }
 
-.alert-box {
-  a {
-    color: white;
-    font-weight: bold;
-    text-decoration: underline;
-  }
-}
-
 /* Logo & Top user nav bar*/
 .logo {
   width: 100%;
@@ -558,24 +550,26 @@
   }
 }
 
+.button.fb_btn {
+  padding: 10px;
+  margin: 0 5px;
+  background-color: #3b5998;
+  color: white;
+}
+
+.button.gp_btn {
+  padding: 10px;
+  margin: 0 5px;
+  background-color: #d34836;
+  color: white;
+}
+
 /* Login Page */
 #login {
   h5 {
     font-size: 20px;
     color: #d32118;
     padding-bottom: 15px;
-  }
-  .fb_btn {
-    padding: 10px;
-    margin: 0 5px;
-    background-color: #3b5998;
-    color: white;
-  }
-  .gp_btn {
-    padding: 10px;
-    margin: 5px;
-    background-color: #d34836;
-    color: white;
   }
   .login_btn {
     text-align: right;
